# todolist-sayajin

./: .gitignore  README.md  db.sqlite3  pyproject.toml
app/: settings.py  urls.py
app/todolist/: apps.py  models.py  serializers.py  urls.py  views.py
app/todolist/migrations/: 0001_initial.py
frontend/src/: App.js
